# lemming

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  README.md  SECURITY.md  pyproject.toml  requirements.txt  schema.json  setup.cfg  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: codeql.yml  dependency-review.yml  lemming.yml  python-publish.yml  scorecards.yml
src/lemming/: __init__.py  __main__.py  config.py
