[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python_lemming"
description = "Lemming is a tool for formatting and linting code."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Koviubi56", email = "koviubi56@duck.com" }]
keywords = ["lemming", "format", "formatter", "lint", "linting", "linter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
]
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
version = { attr = "lemming.__version__" }
dependencies = { file = "requirements.txt" }

[tool.setuptools.package-data]
lemming = ["py.typed"]

[project.urls]
Homepage = "https://github.com/koviubi56/lemming"

[project.scripts]
lemming = "lemming.__main__:main"

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN101", "COM812", "D105", "D212", "FA100", "FA102", "FBT"]
per-file-ignores = { "__main__.py" = ["PLR0913", "T201"], "setup.py" = ["D"] }
fixable = [
    "F632",
    "E711",
    "F901",
    "E703",
    "E712",
    "E713",
    "E714",
    "W291",
    "W292",
    "W293",
    "I001",
    "PT001",
    "PT003",
    "PT006",
    "PT009",
    "PT023",
    "Q",
    "RSE102",
    "SIM101",
    "SIM103",
    "SIM109",
    "SIM112",
    "SIM117",
    "SIM118",
    "SIM201",
    "SIM202",
    "SIM208",
    "SIM210",
    "SIM211",
    "SIM212",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-decorators = ["typing.overload"]

[[tool.lemming.formatters]]
packages = ["ruff"]
format_command = "{pyexe} -m ruff check --output-format=full --fix -n {path}"
check_command = "{pyexe} -m ruff check --output-format=full --show-fixes -n {path}"

[[tool.lemming.formatters]]
packages = ["ruff"]
format_command = "{pyexe} -m ruff format {path}"
check_command = "{pyexe} -m ruff format --check {path}"

[[tool.lemming.linters]]
packages = ["pyroma"]
command = "{pyexe} -m pyroma {path}"
