[metadata]
name = python_lemming
version = attr: lemming.__version__
description = Lemming is a tool for formatting and linting code.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/koviubi56/lemming
author = Koviubi56
author_email = koviubi56@duck.com
license = GPL
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
keywords = lemming, format, formatter, lint, linting, linter

[options]
packages =
    lemming
install_requires =
    tomli; python_version<'3.11'
    python-mylog>=0.7.0
    confz
    typing-extensions>=4.4.0
    typer

python_requires = >=3.11
package_dir =
    =src
zip_safe = no

[options.package_data]
lemming = py.typed

[options.entry_points]
console_scripts =
    lemming = lemming.__main__:main

[pycodestyle]
ignore = E203

[pylama]
ignore = W503

[flake8]
extend-ignore = W503
extend-exclude = venv,*cache*
per-file-ignores =
    tests/*: S101

[isort]
profile = black
